# IX-BlackFox-Cognition

./: .gitignore  COMMERCIAL.md  LICENSE  README.md  cognition.policy.toml  pyproject.toml
.github/workflows/: ci.yml
src/ix_blackfox_cognition/: __init__.py  authority.py  authority_firewall.py  belief_graph.py  belief_graph_logic.py  core.py  epistemics.py  evidence.py  handoff.py  memory.py  memory_logic.py  metadata.py  mission.py  mission_intake.py  plan_validation.py  planning.py  routing.py  routing_logic.py  self_improvement.py  sentinel.py  work_packages.py
tests/: __init__.py  test_authority.py  test_belief_graph.py  test_ci_policy.py  test_core.py  test_epistemics_evidence.py  test_memory.py  test_mission.py  test_package_public_api.py  test_planning.py  test_routing.py  test_sentinel.py  test_work_packages.py
